<resources>
    <string name="app_name">全自动壁纸</string>

    <string name="operate_header">常用操作</string>
    <string name="is_service_open">打开服务</string>
    <string name="update">立即更新</string>
    <string name="collect">收藏当前壁纸</string>

    <string name="global_config_header">全局配置</string>
    <string name="is_local_path">使用本地目录</string>
    <string name="custom_path">选择使用的本地目录</string>
    <string name="wallpaper_lib">选择使用的壁纸库</string>

    <string name="auto_update_header">更新配置</string>
    <string name="is_auto_update">是否自动更新</string>
    <string name="update_freq">自动更新频率(小时)</string>
    <string name="strategy">选择使用的策略</string>

    <string name="others_header">其他</string>
    <string name="total_num">最大缓存图片数</string>
    <string name="open_dir">打开存储目录</string>
    <string name="is_gesture">使用手势</string>
    <string name="is_hide_notification">隐藏通知栏通知</string>
    <string name="is_hide_task">在近期任务列表中隐藏</string>
    <string name="permissions">权限配置</string>

</resources>